CHANGES

Trunk
	New call check mechanism.

	Allow specification of attributes on outer unit of compound srcML document, e.g.,
	directory, filename, version.

	Markup macro arguments.

	Markup macro name.

	Allow for access specifier on classes, e.g., private class A {}.

Trunk
	Default (in all cases) is now ISO-8859-1 for input format.  Changes default
	in libxml2 version.

	Fix wrong return code on expand in srcml2src.

	Add options --cpp_markup_if0 and --cpp_textonly_if0 for controlling whether
	cpp #else sections are parsed and marked up.  --cpp_textonly_if0 is default.

	Change option --cpp_nomark_else to --cpp_textonly_else and add --cpp_markup_else
	for controlling whether cpp #else sections are parsed and marked.

	Fix new cppmode and missing #if.

	Add option --cpp-nomark-else for controlling whether cpp #else sections are
	parsed and marked.

	Fix skipping of #if 0 blocks regression caused by handling of #else sections.

	Use partial cppmode entity handling.

	Fix for no newline before EOF on preprocessor line.

	Start of handling of partial entities in #if #else #end sections.

	Fix detection of #ifdef and #ifndef for storing cppmode.

	A statement following a preprocessor else was getting ignored.  Since we were
	skipping all parsing after an else (until the endif) this was not a problem.
	However, now that we are moving to allowing parsing of the else part, this
	was a problem.  Solved by using a separate stack to keep track of else and endif.

	Remove fix for multiple namespaces for operators methods and implicit casting
	because of speed problems until new handling can be implemented.

	Fix for literals as arguments in template instantiation.

	Start of new handling for operator method names.

	Allow multiple namespaces for operator methods for implicit casting.

	Fix bug with operator methods for implicit casting.  Removes 
	empty type element.

	Detect input and output files when they are the same file.

	Detect incompatible options with encoding.
